minor code formatting changes and spacing fix

--- a/frontend/connect-four/src/index.scss
+++ b/frontend/connect-four/src/index.scss
@@ -91,6 +91,7 @@ body {
     &--new-account-button {
         display: block;
         width: fit-content;
+        height: 3.5rem;
         margin-top: 1.25rem;
         padding: 1rem 2rem;
         border: 1px solid $color-grey-border;
